tests/fixtures/errors/deep-circular/src/c.ts
import { b } from './b';
export const c = 'C';